Alterações nos caminhos

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body class="container">
     <header>
         <div class="wrapperLogo">
-            <img src="../../public/logo.svg" class="logo">
+            <img src="./public/logo.svg" class="logo">
         </div>
         <div class="wallet">
             <div class="wishWallet">
-                <image src="../../public/shooting-star.svg" class="starIcon">
+                <image src="./public/shooting-star.svg" class="starIcon">
                 <h1 class="title">Wish Wallet</h1>
             </div>
-            <a href="../addToken/index.html" class="buttonAddToken">Token</a> 
+            <a href="./screens/addToken/index.html" class="buttonAddToken">Token</a> 
         </div>
     </header>
     <main class="content">
