--- a/screens/editToken/index.html
+++ b/screens/editToken/index.html
@@ -28,7 +28,7 @@
                     </h3>    
                 </div>
                 <div class="back">
-                    <a href="../home/index.html" class="buttonBack">Voltar</a>
+                    <a href="../../index.html" class="buttonBack">Voltar</a>
                 </div>
             </div>
             <div>
